syntax = "proto3";

package domainsearch.v1;

import "google/rpc/status.proto";
import "google/protobuf/wrappers.proto";

option go_package = "github.com/olaysco/domain-search-llm/internal/gen/domainsearch/v1;domainsearchv1";

// The request for SearchPrices method.
message SearchPricesRequest {
  // The product identifier.
  string product = 1;

  // The query is query string for fetching products prices.
  // For example, "domain" product if domain is example.com, query string is "example".
  string query = 2;

  // The currency code defines the currency for requested prices. If currency_code is omitted or incorrect, product's
  // currency will be used.
  string currency_code = 3;

  // The filter parameters.
  PriceFilter filter = 4;
}

message PriceFilter {
  oneof product {
    // The filter for the product "domain".
    DomainPriceFilter domain = 1;
  }
}

message DomainPriceFilter {
  // The number of the quantity.
  google.protobuf.UInt32Value quantity = 1;

  oneof tldFilter {
    // The excludedTldNames is comma separated string containing the TLDs to be excluded from the list with the results.
    // For example, excludedTldNames=com,co.uk.
    // Redundant space characters in the syntax are insignificant. "com,co.uk" and "  com,    co.uk" are equivalent.
    string excludedTldNames = 2;

    // The includedTldNames is comma separated string containing the TLDs to be included to the list with the results.
    // For example, includedTldNames=com,co.uk.
    // Redundant space characters in the syntax are insignificant. "com,co.uk" and "  com,    co.uk" are equivalent.
    string includedTldNames = 3;
  }
}


// The response from SearchPrices method.
message SearchPricesResponse {
  oneof response {
    // The response with product's price.
    Price price = 1;

    // The status of the response.
    google.rpc.Status error = 2;
  }
}

// The normalized price payload returned by the service.
message Price {
  // Promotion is promotion available.
  bool promotion = 1;

  // Cost is cost value.
  float cost = 2;

  // The 3-letter currency code defined in ISO 4217.
  string currency = 3;

  // Domain is full domain name with TLD.
  string domain = 4;

  // Labels is array of domain labels.
  repeated string labels = 5;

  // Availability indicates if the domain is available for purchase.
  bool availability = 6;

  // Similarity score of the suggestion compared to the query.
  double similarity_score = 7;

  // Renewal cost is approximate renewal price for the domain.
  float renewal_cost = 8;

  // AI reasoning explaining why this domain was suggested.
  string reasoning = 9;
}

message DomainSuggestion {
  string domain = 1;
  bool available = 2;
}

service DomainSearchService {
  rpc CheckPrice (SearchPricesRequest) returns (stream SearchPricesResponse);
  rpc CheckPriceAgent (SearchPricesRequest) returns (stream SearchPricesResponse);
}
